theme colors and slide-tray fixes

--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -1,18 +1,15 @@
 // ================== COLORS ================= //
 
-$colors: (
-  yellow: #eebb4d,
-  darkgreen: #184d47,
-  green: #96bb7c,
-  lightgreen: #d6efc7,
-  white: #ffffff,
-  border: lightslategrey,
-  error: #f2304d,
-);
-
 $theme-colors: (
-        "gold": #eebb4d,
-        "darkgreen": #184d47,
+        yellow: #eebb4d,
+        gold: #eebb4d,
+        darkgreen: #184d47,
+        green: #96bb7c,
+        lightgreen: #d6efc7,
+        white: #ffffff,
+        border: lightslategrey,
+        error: #f2304d,
+        red: #d63e3e,
 );
 
 // ================ BREAKPOINTS ============== //
