ellipsis text in data-tables

--- a/styles/component/_data-table.scss
+++ b/styles/component/_data-table.scss
@@ -7,6 +7,19 @@
 
     div {
       transition: all 0.4s ease;
+
+      &[class^="col-"],
+      &[class*=" col-"] {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        * {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
     }
 
     &:not(:first-child) {
