jquery autocomplete css

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 // ================ COMPONENTS =============== //
+@import "component/autocomplete";
 @import "component/btns";
 @import "component/custom-divider";
 @import "component/floating-label-group";
