--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,6 +119,46 @@ body {
   outline: 0;
 }
 
+.ui-helper-hidden-accessible {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.ui-autocomplete.ui-menu {
+  padding: 0;
+  margin-left: 12px;
+  max-width: 530px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #184d47;
+  border-radius: 0 0 8px 8px;
+  border-top: none;
+}
+.ui-autocomplete.ui-menu li.ui-menu-item {
+  cursor: pointer;
+}
+.ui-autocomplete.ui-menu li.ui-menu-item .ui-menu-item-wrapper {
+  background: none;
+  list-style: none;
+  border: none;
+  padding: 2.5rem 1.5rem 1.5rem;
+  font-weight: 500;
+  border-bottom: 1px solid lightslategrey;
+  width: 100%;
+  outline: none;
+  font-size: 1.8rem;
+}
+.ui-autocomplete.ui-menu li.ui-menu-item .ui-menu-item-wrapper.ui-state-active {
+  background-color: rgba(24, 77, 71, 0.8) !important;
+  color: white;
+}
+
 .btn.btn-gold {
   display: block;
   color: white;
