all fields and errors working

--- a/styles/layout/_input.scss
+++ b/styles/layout/_input.scss
@@ -11,6 +11,10 @@ input:not([type='radio']):not([type='checkbox']) {
     font-weight: 900;
     letter-spacing: .3rem;
   }
+
+  &[readonly] {
+    background-color: rgba(239, 239, 239, 0.3);
+  }
 }
 
 select {
