--- a/styles/layout/_form.scss
+++ b/styles/layout/_form.scss
@@ -15,4 +15,11 @@ form {
     font-size: 1.2rem;
     font-weight: 600;
   }
+
+  .form-error {
+    margin: .8rem 0 0 0;
+    color: map_get($theme-colors, error);
+    font-size: 1.6rem;
+    padding: 0 0 0 .8rem;
+  }
 }
