cleaned up and optimized autocomplete

--- a/styles/component/_autocomplete.scss
+++ b/styles/component/_autocomplete.scss
@@ -11,12 +11,11 @@
 
 .ui-autocomplete.ui-menu {
   padding: 0;
-  margin-left: 12px;
-  max-width: 530px;
+  z-index: 1;
+  max-width: 100%;
   border-width: 1px;
   border-style: solid;
-  border-color: map-get($theme-colors, darkgreen);
-  border-radius: 0 0 8px 8px;
+  border-color: map_get($theme-colors, border);
   border-top: none;
 
   li.ui-menu-item {
@@ -26,12 +25,16 @@
       background: none;
       list-style: none;
       border: none;
-      padding: 2.5rem 1.5rem 1.5rem;
+      padding: 1.3rem;
       font-weight: 500;
-      border-bottom: 1px solid map_get($theme-colors, border);
       width: 100%;
       outline: none;
       font-size: 1.8rem;
+      overflow: hidden;
+
+      &:not(:last-child) {
+        border-bottom: 1px solid map_get($theme-colors, border);
+      }
 
       &.ui-state-active {
         background-color: transparentize(map-get($theme-colors, darkgreen), .2) !important;
