--- a/styles/layout/_form.scss
+++ b/styles/layout/_form.scss
@@ -1,8 +1,7 @@
 form {
 
-  button, a.btn {
+  button.btn, a.btn {
     border: none;
-    background-color: map_get($theme-colors, darkgreen);
     padding: .8rem 1.8rem;
     border-radius: .4rem;
     color: white;
