--- a/styles/styles.css
+++ b/styles/styles.css
@@ -377,9 +377,8 @@ article .article-header {
   margin-bottom: 1.4rem;
 }
 
-form button, form a.btn {
+form button.btn, form a.btn {
   border: none;
-  background-color: #184d47;
   padding: 0.8rem 1.8rem;
   border-radius: 0.4rem;
   color: white;
