--- a/styles/layout/_button.scss
+++ b/styles/layout/_button.scss
@@ -1,6 +1,12 @@
 button.btn, a.btn {
-  font-size: 1.6rem !important;
-  font-weight: 600 !important;
+  font-size: 1.6rem;
+  font-weight: 600;
   padding: .8rem 1.8rem;
   border-radius: .4rem;
+
+  &.btn-sm {
+    font-size: 1.2rem;
+    padding: .6rem 1.4rem;
+    border-radius: .3rem;
+  }
 }
