--- a/styles/styles.css
+++ b/styles/styles.css
@@ -471,10 +471,15 @@ footer p {
 }
 
 button.btn, a.btn {
-  font-size: 1.6rem !important;
-  font-weight: 600 !important;
+  font-size: 1.6rem;
+  font-weight: 600;
   padding: 0.8rem 1.8rem;
   border-radius: 0.4rem;
+}
+button.btn.btn-sm, .btn-group-sm > button.btn, a.btn.btn-sm, .btn-group-sm > a.btn {
+  font-size: 1.2rem;
+  padding: 0.6rem 1.4rem;
+  border-radius: 0.3rem;
 }
 
 .hsef {
