--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,6 +10,7 @@
 // ================ COMPONENTS =============== //
 @import "component/autocomplete";
 @import "component/btns";
+@import "component/mgt-card";
 @import "component/custom-divider";
 @import "component/floating-label-group";
 @import "component/login-form";
