--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,7 @@
 @import "component/data-table";
 @import "component/row-sliding";
 @import "component/deletion-modal";
+@import "component/select2";
 
 // ================= LAYOUTS ================= //
 @import "layout/header";
@@ -28,7 +29,7 @@
 @import "layout/footer";
 @import "layout/button";
 
-// ================== Pages ================== //
+// ================== PAGES ================== //
 @import "page/hsef";
 
 // ================= VENDORS ================= //
