--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+*:disabled {
+  cursor: not-allowed;
+}
+
 a {
   text-decoration: none;
 }
@@ -408,6 +412,16 @@ body {
   font-weight: 600;
 }
 
+.select2-container--hsef.select2-container--disabled .select2-selection, .select2-container--hsef.select2-container--disabled.select2-container--focus .select2-selection {
+  cursor: not-allowed;
+  background-color: rgba(239, 239, 239, 0.3);
+}
+.select2-container--hsef.select2-container--disabled .select2-selection button, .select2-container--hsef.select2-container--disabled .select2-selection .select2-selection__choice__display, .select2-container--hsef.select2-container--disabled.select2-container--focus .select2-selection button, .select2-container--hsef.select2-container--disabled.select2-container--focus .select2-selection .select2-selection__choice__display {
+  cursor: not-allowed;
+}
+.select2-container--hsef.select2-container--disabled .select2-search__field, .select2-container--hsef.select2-container--disabled.select2-container--focus .select2-search__field {
+  background-color: transparent;
+}
 .select2-container--hsef .select2-selection {
   border: none;
   padding: 2.5rem 1.5rem 1.5rem;
